# PythonRestApi

./: .dockerignore  .gitignore  Dockerfile  ReadMe.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
src/: app.py
src/resources/: endpoint.py
