[tool.poetry]
name = "simpleapi"
version = "0.1.0"
description = ""
authors = ["Newmi1988 <newmi1988@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.5"
flask-restx = "^0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
